// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> Petit plus matches with snapshot 1`] = `
<article
  className="sc-gsDKAQ nIdrn k-ContributionCard"
  style={
    Object {
      "--contributionCard--border-color": "var(--color-grey-400)",
      "--contributionCard--border-radius": "0.5rem",
      "--contributionCard--border-style": "dashed",
    }
  }
>
  <div
    className="k-ContributionCard__imageWrapper"
  >
    <img
      alt=""
      src="/kitten.jpg"
    />
  </div>
  <div
    className="k-ContributionCard__gridWrapper"
  >
    <span
      className="k-u-color-font1 k-u-weight-700 k-ContributionCard__title"
    >
      Lorem ipsum dolor sit amet, consectetuer
      <p
        className="k-u-color-font1 k-u-size-micro k-u-weight-400 k-ContributionCard__description"
      >
        adipiscing ligula eget dolor eget dolor.eget dolor.eget dolor.
      </p>
    </span>
    <div
      className="sc-hKwDye iDVvFs k-TextInput__wrapper k-TextInput__wrapper--medium k-ContributionCard__inputWrapper k-TextInput__wrapper--hasUnit"
    >
      <input
        className="k-TextInput k-ContributionCard__input k-TextInput--hasUnit"
        defaultValue=""
        disabled={false}
        id="Input"
        name="text"
        onChange={[Function]}
      />
      <span
        className="k-TextInput__unit"
      >
        €
      </span>
    </div>
    <button
      className="sc-bdvvtL icoltH k-Button k-ContributionCard__action k-Button--medium k-Button--helium k-Button--fit-content k-Button--disabled"
      disabled={true}
      style={
        Object {
          "--Button-border-radius": null,
          "--Button-bullet-color": null,
        }
      }
      type="submit"
    >
      Ajouter
    </button>
  </div>
</article>
`;

exports[`<ContributionCard /> default matches with snapshot 1`] = `
<article
  className="sc-gsDKAQ nIdrn k-ContributionCard"
  style={
    Object {
      "--contributionCard--border-color": "var(--color-grey-400)",
      "--contributionCard--border-radius": "0.5rem",
      "--contributionCard--border-style": "solid",
    }
  }
>
  <div
    className="k-ContributionCard__imageWrapper"
  >
    <img
      alt=""
      src="/kitten.jpg"
    />
  </div>
  <div
    className="k-ContributionCard__gridWrapper"
  >
    <span
      className="k-u-color-font1 k-u-weight-700 k-ContributionCard__title k-ContributionCard__title--large"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing ligula eget dolor eget dolor.eget dolor.eget dolor.
    </span>
    <span
      className="k-u-color-font1 k-u-size-huge k-u-weight-700 k-ContributionCard__amount"
    >
      1005 €
    </span>
  </div>
</article>
`;
